@@ -1,3 +1,8 @@
+TAG: seqcacheload-tr8490-3
+DATE: 07/2/2008
+STAFF: sc
+CHANGES: The latest algorithm
+
 TAG: seqcacheload-tr8490-2
 DATE: 02/28/2008
 STAFF: sc
